Filling out 'Functions' + 'Functional' TS sections

--- a/typescript/Classes.ipynb
+++ b/typescript/Classes.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "70616086",
    "metadata": {},
@@ -165,7 +164,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "7a8f42e1",
    "metadata": {},
@@ -225,7 +223,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "832ab71a",
    "metadata": {},
@@ -260,7 +257,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "6a8085f2",
    "metadata": {},
@@ -296,7 +292,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "17195b41",
    "metadata": {},
@@ -348,7 +343,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "830343fc",
    "metadata": {},
@@ -405,7 +399,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "d1ffe04e",
    "metadata": {},
@@ -493,7 +486,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "80e16348",
    "metadata": {},
@@ -552,7 +544,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "d476f6b5",
    "metadata": {},
@@ -561,7 +552,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "58733e62",
    "metadata": {},
@@ -572,7 +562,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "aea8cbf7",
    "metadata": {},
@@ -645,7 +634,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "6662ef62",
    "metadata": {},
@@ -712,7 +700,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "a5ae9a3d",
    "metadata": {},
@@ -816,7 +803,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "1ac4822d",
    "metadata": {},
@@ -870,7 +856,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "840b7989",
    "metadata": {},
@@ -928,7 +913,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "bdd1bafa",
    "metadata": {},
@@ -998,7 +982,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "c3030660",
    "metadata": {},
@@ -1083,7 +1066,16 @@
    ]
   },
   {
-   "attachments": {},
+   "cell_type": "markdown",
+   "id": "c0e9d522",
+   "metadata": {},
+   "source": [
+    "# Structural Typing With Optional Fields\n",
+    "\n",
+    "TBD"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "36e74335",
    "metadata": {},
@@ -1094,7 +1086,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "083d6ec6",
    "metadata": {},
@@ -1170,7 +1161,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "486f4d96",
    "metadata": {},
@@ -1239,7 +1229,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "480b885b",
    "metadata": {},
@@ -1314,7 +1303,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "58ca97e0",
    "metadata": {},
@@ -1368,7 +1356,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "245d0c10",
    "metadata": {},
@@ -1422,7 +1409,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "d18c0367",
    "metadata": {},
@@ -1477,7 +1463,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "fee09e49",
    "metadata": {},
@@ -1652,7 +1637,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "62c1323f",
    "metadata": {},
@@ -1661,7 +1645,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "ddbe69d6",
    "metadata": {},
@@ -1713,7 +1696,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "56d9848e",
    "metadata": {},
@@ -1757,7 +1739,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "8da2a01f",
    "metadata": {},
@@ -1768,7 +1749,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "99a061b8",
    "metadata": {},
@@ -1818,7 +1798,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "2a8d02af",
    "metadata": {},
