--- a/typescript/Functions.ipynb
+++ b/typescript/Functions.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "248a7610",
    "metadata": {},
@@ -13,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "a3491f70",
    "metadata": {},
    "outputs": [
@@ -36,7 +35,7 @@
        "undefined"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -77,11 +76,14 @@
     "\n",
     "  console.log(sum(1, 2, 3)); // Output: 6\n",
     "  console.log(sum(4, 5, 6, 7, 8)); // Output: 30\n",
+    "    \n",
+    "  // add = (a, b) => a - b;  // ILLEGAL (can't reassign a function like in Python)\n",
+    "  // console.log(add(100, 10));\n",
+    "  // NOTE: this exact code would work in pure JS (TS prevents it!)\n",
     "})();\n"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "699693f2",
    "metadata": {},
@@ -143,7 +145,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "68a32a61",
    "metadata": {},
@@ -220,7 +221,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "276371ff",
    "metadata": {},
@@ -364,7 +364,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "e13c7fc7",
    "metadata": {},
@@ -475,7 +474,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "58f3ed9f",
    "metadata": {},
@@ -544,7 +542,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "08d380e6",
    "metadata": {},
@@ -554,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "20778a99",
    "metadata": {},
    "outputs": [
@@ -562,7 +559,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "12\n"
+      "12\n",
+      "10\n"
      ]
     },
     {
@@ -571,7 +569,7 @@
        "undefined"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -585,11 +583,13 @@
     "  // We use _ and __ to ignore the parameters for a lambda\n",
     "  // when we aren't going to use them.\n",
     "  console.log(f((_, __) => 12));\n",
+    "    \n",
+    "  const _ = 10; // technically _ is an actual variable name\n",
+    "  console.log(_);\n",
     "})();\n"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "37c573f7",
    "metadata": {},
@@ -601,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
    "id": "4bebc7be",
    "metadata": {},
    "outputs": [
@@ -609,7 +609,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2\n"
+      "2\n",
+      "1000\n",
+      "110\n"
      ]
     },
     {
@@ -618,7 +620,7 @@
        "undefined"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -626,16 +628,27 @@
    "source": [
     "(() => {\n",
     "  // Function expression\n",
-    "  const subtract = function (x: number, y: number): number {\n",
+    "  let subtract = function (x: number, y: number): number {\n",
     "    return x - y;\n",
     "  };\n",
     "\n",
     "  console.log(subtract(5, 3)); // Output: 2\n",
+    "    \n",
+    "  subtract = (x, y) => x * y;\n",
+    "  console.log(subtract(100,10));\n",
+    "    \n",
+    "  function f(a: number, b: number): number {\n",
+    "      return a + b;\n",
+    "  }\n",
+    "    \n",
+    "  subtract = f;\n",
+    "  console.log(subtract(100,10));\n",
+    "    \n",
+    "  // f = (a, b) => a + b; // NO\n",
     "})();\n"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "f707dd94",
    "metadata": {},
@@ -714,7 +727,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "79d844fd",
    "metadata": {},
@@ -787,7 +799,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "ad50014f",
    "metadata": {},
@@ -853,7 +864,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "bfeb1cb3",
    "metadata": {},
@@ -933,7 +943,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "955d9878",
    "metadata": {},
@@ -994,7 +1003,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "96f57ccd",
    "metadata": {},
@@ -1042,7 +1050,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "f309c423",
    "metadata": {},
@@ -1091,7 +1098,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "7ac297da",
    "metadata": {},
@@ -1137,7 +1143,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "c2b42dad",
    "metadata": {},
