Filling out rest of TS sections except Angular+React.

--- a/typescript/Collections.ipynb
+++ b/typescript/Collections.ipynb
@@ -789,9 +789,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cac6d73e",
+   "metadata": {},
+   "source": [
+    "# Array.from()\n",
+    "\n",
+    "`Array.from()` will convert anything that's either an iterable or kind of like an array into a true array.  It can also be used to copy a real array to a different array (shallow copy).\n",
+    "\n",
+    "For something that's kind of like an array to be usable by `Array.from()`, it must have an index operator and a length property.  Collections in the DOM are like this."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e7fd7a7",
+   "id": "b8c64521",
    "metadata": {},
    "outputs": [],
    "source": []
