--- a/typescript/Standard Library.ipynb
+++ b/typescript/Standard Library.ipynb
@@ -194,14 +194,14 @@
     "\n",
     "This one **can't run in Jupyter** due to the ES5 issue.\n",
     "\n",
-    "Basically a promise is a chainable async object, and setTimeout is used here to simulate asynchronicity.\n",
+    "Basically a promise is a chainable async object, and setTimeout is used here to simulate asynchronicity.  If you ommit the timeout, it will go into the browser's event loop queue after whatever is already there currently.\n",
     "\n",
     "When you call APIs that make HTTP requests, etc. you will get back promises that are actually asynchronous.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "113c9b7e",
    "metadata": {},
    "outputs": [
@@ -214,16 +214,16 @@
       "    return new Promise((resolve, reject) => {",
       "_______________^",
       "TS2585: 'Promise' only refers to a type, but is being used as a value here. Do you need to change your target library? Try changing the 'lib' compiler option to es2015 or later.",
-      "    at execTranspile (/mnt/d/LinuxHome/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/lib/kernel.js:229:23)",
-      "    at Session.transpiler [as transpile] (/mnt/d/LinuxHome/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/lib/kernel.js:288:35)",
-      "    at Session._runNow (/mnt/d/LinuxHome/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/node_modules/nel/lib/nel.js:835:39)",
-      "    at Session._run (/mnt/d/LinuxHome/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/node_modules/nel/lib/nel.js:786:14)",
-      "    at Session.execute (/mnt/d/LinuxHome/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/node_modules/nel/lib/nel.js:929:10)",
-      "    at Kernel.execute_request (/mnt/d/LinuxHome/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/node_modules/jp-kernel/lib/handlers_v5.js:116:18)",
-      "    at Kernel.onShellMessage (/mnt/d/LinuxHome/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/node_modules/jp-kernel/lib/jp-kernel.js:285:41)",
-      "    at Socket.<anonymous> (/mnt/d/LinuxHome/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/node_modules/jmp/index.js:350:17)",
+      "    at execTranspile (/Users/davidpetrofsky/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/lib/kernel.js:229:23)",
+      "    at Session.transpiler [as transpile] (/Users/davidpetrofsky/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/lib/kernel.js:288:35)",
+      "    at Session._runNow (/Users/davidpetrofsky/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/node_modules/nel/lib/nel.js:835:39)",
+      "    at Session._run (/Users/davidpetrofsky/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/node_modules/nel/lib/nel.js:786:14)",
+      "    at Session.execute (/Users/davidpetrofsky/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/node_modules/nel/lib/nel.js:929:10)",
+      "    at Kernel.execute_request (/Users/davidpetrofsky/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/node_modules/jp-kernel/lib/handlers_v5.js:116:18)",
+      "    at Kernel.onShellMessage (/Users/davidpetrofsky/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/node_modules/jp-kernel/lib/jp-kernel.js:285:41)",
+      "    at Socket.<anonymous> (/Users/davidpetrofsky/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/node_modules/jmp/index.js:350:17)",
       "    at Socket.emit (node:events:511:28)",
-      "    at Socket._emitMessage (/mnt/d/LinuxHome/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/node_modules/zeromq/lib/index.js:649:15)"
+      "    at Socket._emitMessage (/Users/davidpetrofsky/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/node_modules/zeromq/lib/index.js:649:15)"
      ]
     }
    ],
@@ -395,7 +395,8 @@
     "- within an async function (and only there), you can call `await` on a promise (such as another async function call) inline\n",
     "- `await` will stop execution of the function until the promise resolves and then return the resolved value (or throw) from the await statement\n",
     "- execution will then continue until another `await` or the end of the function\n",
-    "- this is a nicer way to **chain promises**\n"
+    "- this is a nicer way to **chain promises**\n",
+    "- you can call an async function without 'await' (eg. if not in an async function), and then directly get a promise\n"
    ]
   },
   {
@@ -483,7 +484,7 @@
     "\n",
     "This **won't run in Jupyter** because we're not in a browser.\n",
     "\n",
-    "This is the kind of built-in JS API that is needed for client-side updates from the server (eg. **AJAX**). Knowing that, you can install npm packages to wrap it in a nicer way (eg. using async/await type stuff).\n"
+    "This is the kind of built-in JS API that is needed for client-side updates from the server (eg. **AJAX**). Knowing that, you can install npm packages to wrap it in a nicer way (eg. using async/await type stuff)."
    ]
   },
   {
@@ -603,9 +604,106 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f98ca7a3",
+   "metadata": {},
+   "source": [
+    "# DOM\n",
+    "\n",
+    "TS from within Jupyter has no DOM, so you can't run DOM code here.  This cell looks weird because I made the mistake of writing it in the quick study notes first and then pasting here.\n",
+    "\n",
+    "TODO: rewrite as code cells (that compile but don't run in jupyter) and markdown cells.\n",
+    "\n",
+    "```\n",
+    "these are global objects you can automatically access in both JS and TS\n",
+    "    though TS adds strong typing to them so that you will use them safely\n",
+    "  to add your own members to them JS-style in TS, you can use declaration merging on their types\n",
+    "    then TS will let you set the fields you want\n",
+    "  it's worth noting that the below types exist in JS by the same name, but TS adds ambient declarations\n",
+    "    this is to make you code in a type-safe way so that when it compiles down to JS, you have less bugs\n",
+    "  \n",
+    "  window: Window (default target of 'this')\n",
+    "    contains all global variables defined with 'var' (old-fashioned not recommended way)\n",
+    "    also contains document, location, etc. as properties\n",
+    "    properties added to window become globally available too\n",
+    "      eg. setTimeout() actually lives in window, and you can call setTimeout() without putting window. in front\n",
+    "    you can check for existence (eg. to see if script or browser) with 'typeof window === undefined' or similar\n",
+    "  document: Document\n",
+    "    the main starting point for DOM manipulation\n",
+    "    \n",
+    "    Getting Single Elements\n",
+    "        const element: HTMLElement|null = document.getElementById('myId');\n",
+    "        if (element) {\n",
+    "          const buttonElement: HTMLButtonElement = element as HTMLButtonElement;\n",
+    "          console.log(buttonElement.value);\n",
+    "        }\n",
+    "\n",
+    "        const myDiv = document.querySelector(\"#myDiv\") as HTMLDivElement; // if no strict null checks option\n",
+    "        if (myDiv) {\n",
+    "            // TypeScript knows `myDiv` is a div element\n",
+    "            myDiv.style.backgroundColor = \"blue\";\n",
+    "        }\n",
+    "    Getting Multiple Elements\n",
+    "        document.getElementsByClassName('myClass')\n",
+    "        document.getElementsByTagName('myTag')\n",
+    "        document.querySelectorAll('myTag.myClass')\n",
+    "\n",
+    "        these return array-like objects that aren't true arrays\n",
+    "          can make into true arrays with Array.from()\n",
+    "        return empty collection instead of null when not found\n",
+    "\n",
+    "    Events\n",
+    "        myDiv.addEventListener('click', (event) => {\n",
+    "          event.preventDefault(); // or stopPropagation, whatever you want\n",
+    "          console.log('clicked!');\n",
+    "        });\n",
+    "\n",
+    "        element.dispatchEvent(event) to dispatch an event yourself\n",
+    "          can be one of the built-in ones or your own\n",
+    "          an event has a name and an event object with properties (like addEventListener shows)\n",
+    "          eg. const myEvent = new CustomEvent('myCustomEvent', {\n",
+    "                  detail: { message: 'Hello from custom event!' }\n",
+    "              });\n",
+    "    \n",
+    "        myDiv.removeEventListener('click', fn); // fn must be same reference you added for this to work\n",
+    "          if an element is remove from the DOM, it is considered good practice to remove the listeners\n",
+    "          although modern browsers SHOULD be able to figure this out\n",
+    "            if they don't, it would be a memory leak\n",
+    "    \n",
+    "    Adding DOM Elements\n",
+    "      const newDiv: HTMLDivElement = document.createElement('div');\n",
+    "      newDiv.id = 'new-div';\n",
+    "      newDiv.innerText = 'This is a new div.';\n",
+    "\n",
+    "      document.body.appendChild(newDiv); // to append top level\n",
+    "\n",
+    "      const container = document.getElementById('container');\n",
+    "      if (container) {\n",
+    "          container.appendChild(newDiv);\n",
+    "      }\n",
+    "\n",
+    "    Removing DOM Elements\n",
+    "      element.parentNode.removeChild(element)\n",
+    "      element.remove() // more direct, but not supported in IE\n",
+    "        polyfill can fix that though\n",
+    "  location: Location\n",
+    "    for dealing with url and host type stuff\n",
+    "\n",
+    "    href = current page url\n",
+    "      can also use toString()\n",
+    "    various properties for components of the URL, such as hostname, search, port, etc.\n",
+    "\n",
+    "    reload() to refresh the page\n",
+    "    replace(url: string) to navigate to another page without adding a back button entry\n",
+    "    assign(url: string) to navigate to another page with a back button entry\n",
+    "      you can also change location.href and do location.reload()\n",
+    "```"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a5e910e2",
+   "id": "a891cc65",
    "metadata": {},
    "outputs": [],
    "source": []
