--- a/typescript/Testing.ipynb
+++ b/typescript/Testing.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "95e938f4",
    "metadata": {},
@@ -10,7 +9,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "52cfea30",
    "metadata": {},
@@ -19,11 +17,10 @@
     "\n",
     "To use it on standalone TypeScript, you would install the npm package for jasmine and run `jasmine --init` to make a _spec_ folder with a jasmine config. By convention, you are supposed to put your test files in there, but you can put them next to your code and manually move/modify the jasmine config if you want.\n",
     "\n",
-    "Then the jasmine commands has **discovery** for finding tests.\n"
+    "Then the jasmine commands have **discovery** for finding tests."
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "baf9b6c7",
    "metadata": {},
@@ -32,7 +29,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "545d337e",
    "metadata": {},
@@ -43,7 +39,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "e4a319b4",
    "metadata": {},
@@ -52,7 +47,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "7fc000b8",
    "metadata": {},
@@ -61,7 +55,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "e4d57c36",
    "metadata": {},
@@ -70,7 +63,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "c0777191",
    "metadata": {},
@@ -79,7 +71,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "af795b24",
    "metadata": {},
@@ -88,7 +79,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "32c097b7",
    "metadata": {},
@@ -97,7 +87,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "0cc2e41b",
    "metadata": {},
@@ -106,7 +95,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "8aaf2e6a",
    "metadata": {},
