Filling in JS notebook info for TS sheet.

--- a/javascript/jQuery.ipynb
+++ b/javascript/jQuery.ipynb
@@ -149,9 +149,100 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "975bd891",
+   "metadata": {},
+   "source": [
+    "Adding elements to the DOM using jQuery is straightforward and can be done in several ways, depending on where you want to insert the new elements and how you want to manipulate them. Here are some common methods for adding content to the DOM using jQuery:\n",
+    "\n",
+    "### 1. `append()` and `appendTo()`\n",
+    "\n",
+    "- **`append()`**: Adds content to the end of the selected elements.\n",
+    "- **`appendTo()`**: Similar to `append()`, but it reverses the order of operation. The target comes first, and the content to append is in the parentheses.\n",
+    "\n",
+    "```javascript\n",
+    "// Using append()\n",
+    "$('#parentElement').append('<div>New Div</div>');\n",
+    "\n",
+    "// Using appendTo()\n",
+    "$('<div>New Div</div>').appendTo('#parentElement');\n",
+    "```\n",
+    "\n",
+    "### 2. `prepend()` and `prependTo()`\n",
+    "\n",
+    "- **`prepend()`**: Adds content to the beginning of the selected elements.\n",
+    "- **`prependTo()`**: Similar to `prepend()`, but with reversed syntax.\n",
+    "\n",
+    "```javascript\n",
+    "// Using prepend()\n",
+    "$('#parentElement').prepend('<div>New Div</div>');\n",
+    "\n",
+    "// Using prependTo()\n",
+    "$('<div>New Div</div>').prependTo('#parentElement');\n",
+    "```\n",
+    "\n",
+    "### 3. `before()` and `after()`\n",
+    "\n",
+    "- **`before()`**: Inserts content before the selected elements.\n",
+    "- **`after()`**: Inserts content after the selected elements.\n",
+    "\n",
+    "```javascript\n",
+    "// Using before()\n",
+    "$('#referenceElement').before('<div>New Div</div>');\n",
+    "\n",
+    "// Using after()\n",
+    "$('#referenceElement').after('<div>New Div</div>');\n",
+    "```\n",
+    "\n",
+    "### 4. `html()`\n",
+    "\n",
+    "- Replaces the inner HTML of the selected elements with the specified content.\n",
+    "\n",
+    "```javascript\n",
+    "// Replaces the inner HTML of the element with the new content\n",
+    "$('#element').html('<div>New Content</div>');\n",
+    "```\n",
+    "\n",
+    "### 5. `text()`\n",
+    "\n",
+    "- Sets the text content of the selected elements.\n",
+    "\n",
+    "```javascript\n",
+    "// Sets the text content\n",
+    "$('#element').text('New Text Content');\n",
+    "```\n",
+    "\n",
+    "### Example\n",
+    "\n",
+    "Suppose you have the following HTML structure:\n",
+    "\n",
+    "```html\n",
+    "<div id=\"parentElement\"></div>\n",
+    "```\n",
+    "\n",
+    "To add a new `div` inside `#parentElement` using jQuery, you can do:\n",
+    "\n",
+    "```javascript\n",
+    "$('#parentElement').append('<div class=\"child\">New Child Div</div>');\n",
+    "```\n",
+    "\n",
+    "This will result in:\n",
+    "\n",
+    "```html\n",
+    "<div id=\"parentElement\">\n",
+    "    <div class=\"child\">New Child Div</div>\n",
+    "</div>\n",
+    "```\n",
+    "\n",
+    "### Conclusion\n",
+    "\n",
+    "jQuery offers a rich set of methods for manipulating the DOM, making it easy to add, modify, or replace elements. These methods provide flexibility for where and how you add new content, allowing you to easily build and manage dynamic web pages."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ec64f61",
+   "id": "3da9b434",
    "metadata": {},
    "outputs": [],
    "source": []
