Adding research about iterables, symbols, etc.

--- a/javascript/Vanilla JS Syntax.ipynb
+++ b/javascript/Vanilla JS Syntax.ipynb
@@ -386,9 +386,79 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "84377ff3",
+   "metadata": {},
+   "source": [
+    "# Class Properties"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "67dd6dd8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<script>\n",
+       "  (() => {\n",
+       "        class MyClass {\n",
+       "          x = 5; // no type\n",
+       "        \n",
+       "            constructor() {\n",
+       "                this.y = 10; // also permitted (unlike TS)\n",
+       "            }\n",
+       "        }\n",
+       "      \n",
+       "      const m = new MyClass();\n",
+       "      console.log(m); // both x and y are set\n",
+       "  })();\n",
+       "</script>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%html\n",
+    "\n",
+    "<script>\n",
+    "  (() => {\n",
+    "        class MyClass {\n",
+    "          x = 5; // no type\n",
+    "        \n",
+    "            constructor() {\n",
+    "                this.y = 10; // also permitted (unlike TS) (Python style)\n",
+    "            }\n",
+    "        }\n",
+    "      \n",
+    "      const m = new MyClass();\n",
+    "      console.log(m); // both x and y are set\n",
+    "  })();\n",
+    "</script>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "78bb5886",
+   "metadata": {},
+   "source": [
+    "# Non-Existent Properties\n",
+    "\n",
+    "Properties that don't exist on an object will read as `undefined`.  That is consistent with the behavior of not initializing a varible in a class."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f96d694e",
+   "id": "1f714a3a",
    "metadata": {},
    "outputs": [],
    "source": []
