--- a/typescript/Classes.ipynb
+++ b/typescript/Classes.ipynb
@@ -2325,12 +2325,14 @@
    "id": "f9134753",
    "metadata": {},
    "source": [
-    "# Anonymous Classes"
+    "# Anonymous Classes\n",
+    "\n",
+    "NOTE: anonymous classes are __closures__ just like lambdas are."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 35,
    "id": "99442a42",
    "metadata": {},
    "outputs": [
@@ -2348,7 +2350,7 @@
        "undefined"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2356,7 +2358,9 @@
    "source": [
     "(() => {\n",
     "    function f() {\n",
-    "        return {x: 10, y: 20, z: 30, volume: function() {return this.x * this.y * this.z;}};\n",
+    "        return {x: 10, y: 20, z: 30, \n",
+    "                volume: function() {return this.x * this.y * this.z;}\n",
+    "               };\n",
     "    }\n",
     "    \n",
     "    console.log(f());\n",
@@ -2421,9 +2425,246 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "aeab3191",
+   "metadata": {},
+   "source": [
+    "# Computed Properties\n",
+    "\n",
+    "This is a __JS feature__ that works pretty much unchanged in TS. It works for any object-like thing with keys (objects, interfaces, classes).\n",
+    "\n",
+    "Basically, it's an extension of the fact that all objects have the `[]` operator as an alternative way to access keys.  Instead of giving a key name, quoted or not, you put `[]` around the key part.  What's inside is some expression, which can be used again with the `[]` operator on the instance to retrieve that value.\n",
+    "\n",
+    "Any normal syntax thing you could do on a key-value pair in an object or class (such as type annotations, functions, variables, etc.) will work, but you just use the whole thing in `[]` as the name.\n",
+    "\n",
+    "The part in `[]` is a computed expression, so it can be dynamically computed or be something that is not a string such as a number.\n",
+    "\n",
+    "When you iterate the keys of the object, it will give you the actual items used."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "07246047",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "  '20': 200,\n",
+      "  '30': 300,\n",
+      "  '40': [Function (anonymous)],\n",
+      "  x: 100,\n",
+      "  'Hello, Bob': 400,\n",
+      "  'a b c ': 500\n",
+      "}\n",
+      "\n",
+      "100\n",
+      "100\n",
+      "200\n",
+      "300\n",
+      "100\n",
+      "400\n",
+      "\n",
+      "20\n",
+      "30\n",
+      "40\n",
+      "x\n",
+      "Hello, Bob\n",
+      "a b c \n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "undefined"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(() => {\n",
+    "    const t = 'Hello, ';\n",
+    "    \n",
+    "    const m = {\n",
+    "        ['x']: 100,\n",
+    "        [20]: 200,\n",
+    "        [30]: 300,\n",
+    "        [40](a: number) { return a*a; },\n",
+    "        [t + 'Bob']: 400,\n",
+    "        'a b c ': 500,\n",
+    "    };\n",
+    "    \n",
+    "    console.log(m); // all the above shown\n",
+    "    console.log();\n",
+    "    \n",
+    "    console.log(m.x);\n",
+    "    console.log(m['x']);\n",
+    "    // console.log(m.20); // NO\n",
+    "    console.log(m[20]);\n",
+    "    console.log(m[30]);\n",
+    "    console.log(m[40](10)); // 100 (10 squared)\n",
+    "    console.log(m['Hello, Bob']);\n",
+    "    \n",
+    "    console.log();\n",
+    "    for (const item of Object.keys(m)) {\n",
+    "        console.log(item);\n",
+    "    }\n",
+    "})();"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "77264b37",
+   "metadata": {},
+   "source": [
+    "# Iterating Over Properties\n",
+    "\n",
+    "When you iterate over the keys of an object using `Object.keys(o)`, it will only pick up keys that are actually set on the object, not variables that are declared in the class but not set.  But even setting explicitly to `undefined` counts!  Functions are not included, but lambda variables are, including function expressions!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "cb2a2f68",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "x\n",
+      "y\n",
+      "g\n",
+      "h\n",
+      "undefined\n",
+      "\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "x\n",
+      "y\n",
+      "g\n",
+      "h\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "undefined"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(() => {\n",
+    "    class MyClass {\n",
+    "        x = 10;\n",
+    "        y: number = 20;\n",
+    "        z: number; // technically not set on instance\n",
+    "        \n",
+    "        [1] = 30;\n",
+    "        [2] = undefined; // set but set to undefined (not same thing)\n",
+    "        [3] = null;\n",
+    "        \n",
+    "        f() {}\n",
+    "        g = () => {}\n",
+    "        h = function() {}\n",
+    "    }\n",
+    "    \n",
+    "    class MyDerivedClass extends MyClass {\n",
+    "        x = 20;\n",
+    "        f() {}\n",
+    "    }\n",
+    "    \n",
+    "    const m = new MyClass();\n",
+    "    for (const item of Object.keys(m)) {\n",
+    "        console.log(item);\n",
+    "    }\n",
+    "    console.log(m.z);\n",
+    "    console.log();\n",
+    "    \n",
+    "    const n = new MyDerivedClass();\n",
+    "    for (const item of Object.keys(n)) {\n",
+    "        console.log(item);\n",
+    "    }\n",
+    "})();"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b6fc3fe4",
+   "metadata": {},
+   "source": [
+    "# Iterator Protocol\n",
+    "\n",
+    "This can't be shown in Jupyter because it requires ES6 symbols!  It is a pure JS feature.\n",
+    "\n",
+    "To make a class iterable (eg. with `for...of`), it needs a method called `[Symbol.iterator]()` that takes no params and returns an object that has a `next()` method that returns an `IteratorResult<T>`.  `IteratorResult` is an interface defined in TypeScript (not JS) to describe the structure expected to be returned from `next()`, which is an object that has a `value` and `done` property.  Return `null` and `true` when there are no more items to return.\n",
+    "\n",
+    "Here is an example that uses an anonymous class:\n",
+    "\n",
+    "```\n",
+    "class IterableClass {\n",
+    "    private items: number[] = [];\n",
+    "\n",
+    "    constructor(items: number[]) {\n",
+    "        this.items = items;\n",
+    "    }\n",
+    "\n",
+    "    // Implementing the [Symbol.iterator] method\n",
+    "    [Symbol.iterator]() {\n",
+    "        let index = 0;\n",
+    "        let items = this.items;\n",
+    "\n",
+    "        return {\n",
+    "            next(): IteratorResult<number> {\n",
+    "                if (index < items.length) {\n",
+    "                    return { value: items[index++], done: false };\n",
+    "                } else {\n",
+    "                    return { value: null, done: true };\n",
+    "                }\n",
+    "            }\n",
+    "        };\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "// Example usage\n",
+    "const myIterable = new IterableClass([1, 2, 3, 4, 5]);\n",
+    "\n",
+    "for (const item of myIterable) {\n",
+    "    console.log(item); // Outputs 1, 2, 3, 4, 5\n",
+    "}\n",
+    "```\n",
+    "\n",
+    "NOTE: you can also put a `*` in front to use it as a __generator__ function too (with no anonynous object needed)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d42ca9c7",
+   "metadata": {},
+   "source": [
+    "# Generator Methods\n",
+    "\n",
+    "Works just like a generator function, but the `*` goes in front of the name instead of after the word `function` since you don't have that in a method."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "522b1f2c",
+   "id": "d09b0f54",
    "metadata": {},
    "outputs": [],
    "source": []
