--- a/typescript/Collections.ipynb
+++ b/typescript/Collections.ipynb
@@ -801,9 +801,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7afdacb2",
+   "metadata": {},
+   "source": [
+    "# Type Inference on Mixed Arrays\n",
+    "\n",
+    "When you mix arrays and use type inference, TypeScript will try to find the __polymorphic base__ if there are no primitives involved - otherwise it will use a __type union__, or a combination of the two.\n",
+    "\n",
+    "eg. `[1, 'hi', true]` would have type `(number|string|boolean)[]`\n",
+    "\n",
+    "eg. `[new MyBase(), new MyDerivedFromBase()]` would have type `MyBase[]`\n",
+    "\n",
+    "eg. `[new MyBase(), new MyDerivedFromBase(), new Object()]` would have type `Object[]`"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b8c64521",
+   "id": "e28825d5",
    "metadata": {},
    "outputs": [],
    "source": []
