--- a/typescript/Standard Library.ipynb
+++ b/typescript/Standard Library.ipynb
@@ -701,9 +701,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4e184cec",
+   "metadata": {},
+   "source": [
+    "# Symbol\n",
+    "\n",
+    "This is an ES6 (JS) feature, and thus Jupyter can't show it.\n",
+    "\n",
+    "  - `Symbol()` creates a new symbol which is unique\n",
+    "    - you __do not__ use `new` (not a real class)\n",
+    "  - `Symbol(name)` can give it a debug name for printing\n",
+    "    - but using the same name in another call will give you two unique separate symbols\n",
+    "  - `Symbol` has some built-in static members (even though not a class, weird)\n",
+    "    - `Symbol.iterator` is for use with the iterable protocol\n",
+    "  - to assign a symbol in TS, use the primitive type `symbol`\n",
+    "  - a symbol can be used as a unique key in a map or object by putting it in `[]`\n",
+    "  - a symbol key will be ignored when you iterate an object with `Objects.keys()`\n",
+    "    - but it will not be ignored in maps\n",
+    "    - this is a way to \"hide\" a property on an object in a way"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a891cc65",
+   "id": "5412a282",
    "metadata": {},
    "outputs": [],
    "source": []
